Fix bug with stretching button

--- a/src/styles/components/add-item.scss
+++ b/src/styles/components/add-item.scss
@@ -4,6 +4,7 @@
   align-items: stretch;
   height: 100%;
   min-width: fit-content;
+  max-width: 5em;
 }
 
 .add-option__cart {
@@ -14,5 +15,6 @@
 @media screen and (min-width: 320px) and (max-width: 540px) {
   .add-option {
     width: 100%;
+    max-width: 100%;
   }
 }
